# canal-rs

./: Cargo.toml  README.md
src/: client.rs  cluster.rs  codec.rs  lib.rs  proto.rs
src/examples/: Cargo.toml  cluster.rs  subscribe.rs
src/protobuf/: CanalProtocol.proto  CanalProtocol.rs  EntryProtocol.proto  EntryProtocol.rs  foo.proto  foo.rs  mod.rs
