[package]
name = "canal-rs"
version = "0.1.0"
authors = ["YahanLin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "2", features = ["with-bytes"] }
async-log = {version= "2.0.0"}
log = "0.4"
tokio-util = { version = "0.2.0", features = ["full"] }
tokio = { version = "0.2", features = ["full"] }
bytes = "0.4.12"
futures = "0.3.0"