[package]
name = "canal-rs"
version = "0.1.1"
authors = ["Rg"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "2.25.1", features = ["with-bytes"] }
tokio-util = { version = "0.6.8", features = ["full"] }
tokio = { version = "1", features = ["full"] }
bytes = { version = "1.1.0", features = ["serde"] }
futures = "0.3.0"
log = "0.4"
failure = "0.1.6"
zookeeper = "0.5"
serde_json = "1.0"
serde = "1.0.104"
serde_derive = "1.0.104"