[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
canal-rs={path="../../"}
tokio-util = { version = "0.2.0", features = ["full"] }
tokio = { version = "0.2", features = ["full"] }
bytes = { version = "0.5", features = ["serde"] }
futures = "0.3.0"
log = "0.4"
pretty_env_logger = "0.3"
failure = "0.1.6"
protobuf = { version = "2", features = ["with-bytes"] }

[[example]]
name = "subscribe"
path = "subscribe.rs"