[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
canal-rs = { path = "../../" }
protobuf = { version = "2.25.1", features = ["with-bytes"] }
tokio-util = { version = "0.6.8", features = ["full"] }
tokio = { version = "1", features = ["full"] }
bytes = { version = "1.1.0", features = ["serde"] }
futures = "0.3.0"
log = "0.4"
pretty_env_logger = "0.3"
failure = "0.1.6"
zookeeper = "0.5"

[[example]]
name = "cluster"
path = "cluster.rs"

[[example]]
name = "subscribe"
path = "subscribe.rs"